log likelihood stuff

--- a/config/uda.yaml
+++ b/config/uda.yaml
@@ -63,6 +63,7 @@ uda:
   encoding: forward_diffusion
   decoding: euler
   report_loglikelihood: false
+  report_asv: false
 
 preprocessing:
   rvad: true
